--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -3,5 +3,5 @@
 <h1>Workers</h1>
 <router-outlet></router-outlet>
 </body>
-<h1 class="footer">Modified By CloudBlitz</h1>
+<h1 class="footer">Attendance Management System</h1>
 </html>
